# hecpoc

./: Cargo.toml  Config.md  Formats.md  HECpoc.md  History.md  InfraHEC.md  PerfIntake.md  PromptMiss.md  RustEx.md  Stack.md  Store.md  config.example.toml
docs/: History.md  PerfIntake.md  Restart.md
scripts/: README.md  analyze_bench_run.py  bench_hec_ab.sh  capture_net_observe.sh  capture_system_stats.sh  curl_hec_matrix.sh  raw_socket_hec.sh  raw_socket_otel.sh  verify_splunk_hec.sh
scripts/config/: otel-splunk-hec.yaml  vector-hec-receiver.yaml  vector-to-hecpoc-raw.yaml
src/: main.rs
src/hec_receiver/: app.rs  auth.rs  body.rs  config.rs  event.rs  handler.rs  health.rs  hec_request.rs  index.rs  mod.rs  outcome.rs  parse_event.rs  parse_raw.rs  protocol.rs  raw_events.rs  report.rs  sink.rs  stats.rs
viz/: README.md  hec_batch_writeblock.mmd  stage_flow.mmd
