[package]
name = "hec-receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
figment = { version = "0.10", features = ["toml"] }
flate2 = "1"
humantime = "2"
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "time", "sync", "fs", "io-util"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }

[dev-dependencies]
memchr = "2"
tempfile = "3"
